New font and layout
Changed to Comfortaa font and fixed response layout.

--- a/app/src/main/res/layout/custom_list_layout.xml
+++ b/app/src/main/res/layout/custom_list_layout.xml
@@ -10,6 +10,8 @@
         android:layout_width="377dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
+        android:layout_marginBottom="16dp"
+        android:fontFamily="@font/comfortaa"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,7 +24,8 @@
         android:id="@+id/claim_url"
         android:layout_width="375dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/comfortaa"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,6 +39,7 @@
         android:layout_width="376dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="13dp"
+        android:fontFamily="@font/comfortaa"
         android:text="TextView"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/cardView"
@@ -50,6 +54,7 @@
         android:layout_width="375dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
+        android:fontFamily="@font/comfortaa_bold"
         android:text="TextView"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
