More results are displayable and some layout changes
Can now change the maximum number of displayable claims (possibly let the user choose maximum number?). Layout is also slightly different.
TODO: add images

--- a/app/src/main/res/layout/custom_list_layout.xml
+++ b/app/src/main/res/layout/custom_list_layout.xml
@@ -38,6 +38,7 @@
         android:layout_marginTop="16dp"
         android:fontFamily="@font/comfortaa_bold"
         android:text="TextView"
+        android:textColor="#272727"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,6 +54,7 @@
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/comfortaa_light"
         android:text="TextView"
+        android:textColor="#2E2D2D"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/claim_description"
@@ -69,7 +71,8 @@
         android:fontFamily="@font/comfortaa"
         android:text="TextView"
         android:textAlignment="viewStart"
-        android:textSize="18sp"
+        android:textColor="#272727"
+        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/cardView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,6 +88,7 @@
         android:text="TextView"
         android:textAlignment="viewStart"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="#272727"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textual_rating"
@@ -119,7 +123,7 @@
             android:fontFamily="@font/comfortaa_bold"
             android:text="Read The Full Article"
             android:textAllCaps="false"
-            android:textColor="#474951"
+            android:textColor="#272727"
             android:textColorHighlight="@color/main_blue"
             android:textColorLink="@color/main_blue"
             app:cornerRadius="0dp"
