--- a/app/src/main/res/layout/custom_list_layout.xml
+++ b/app/src/main/res/layout/custom_list_layout.xml
@@ -22,6 +22,7 @@
         android:layout_width="398dp"
         android:layout_height="70dp"
         android:layout_marginStart="6dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="7dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,8 +49,9 @@
 
     <TextView
         android:id="@+id/claim_date"
-        android:layout_width="375dp"
-        android:layout_height="wrap_content"
+        android:layout_width="297dp"
+        android:layout_height="19dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/comfortaa_light"
@@ -57,11 +59,9 @@
         android:textColor="#2E2D2D"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/claim_description"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/claim_description"
-        app:layout_constraintVertical_bias="0.065" />
+        app:layout_constraintVertical_bias="0.089" />
 
     <TextView
         android:id="@+id/textual_rating"
@@ -83,7 +83,7 @@
         android:id="@+id/claim_title"
         android:layout_width="375dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="16dp"
         android:fontFamily="@font/comfortaa_bold"
         android:text="TextView"
         android:textAlignment="viewStart"
@@ -93,15 +93,32 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textual_rating"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
+    <ImageButton
+        android:id="@+id/share_button"
+        android:layout_width="54dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="7dp"
+        android:text="Share"
+        android:textAllCaps="false"
+        android:textColor="#272727"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/claim_date"
+        app:layout_constraintTop_toTopOf="@+id/claim_description"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@android:drawable/ic_menu_share" />
+
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="362dp"
-        android:layout_height="362dp"
+        android:layout_height="wrap_content"
         app:cardCornerRadius="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
