--- a/app/src/main/res/layout/list_of_claims.xml
+++ b/app/src/main/res/layout/list_of_claims.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/result_note"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="176dp"
         android:layout_marginTop="147dp"
