--- a/app/src/main/res/layout/custom_list_layout.xml
+++ b/app/src/main/res/layout/custom_list_layout.xml
@@ -3,34 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    app:layout_constrainedHeight="true">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="200dp"
-        android:layout_height="10dp"
-        android:layout_marginStart="105dp"
-        android:layout_marginEnd="106dp"
+        android:layout_width="404dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginEnd="103dp"
+        android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toTopOf="@+id/claim_title"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.549"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/screen_background_light" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="398dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="6dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="7dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/claim_date"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@android:drawable/screen_background_light" />
+        app:srcCompat="@drawable/grey_line_png_6" />
 
     <TextView
         android:id="@+id/claim_description"
@@ -44,36 +32,35 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/claim_date"
         android:layout_width="297dp"
         android:layout_height="19dp"
-        android:layout_marginStart="20dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
         android:fontFamily="@font/comfortaa_light"
         android:text="TextView"
         android:textColor="#2E2D2D"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.157"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/claim_description"
-        app:layout_constraintVertical_bias="0.089" />
+        app:layout_constraintVertical_bias="0.076" />
 
     <TextView
         android:id="@+id/textual_rating"
         android:layout_width="375dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:fontFamily="@font/comfortaa"
         android:text="TextView"
         android:textAlignment="viewStart"
         android:textColor="#272727"
         android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/cardView"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -102,50 +89,62 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="7dp"
+        android:layout_marginTop="8dp"
         android:text="Share"
         android:textAllCaps="false"
         android:textColor="#272727"
         android:textSize="10sp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView2"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.547"
         app:layout_constraintStart_toEndOf="@+id/claim_date"
-        app:layout_constraintTop_toTopOf="@+id/claim_description"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintTop_toBottomOf="@+id/claim_description"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@android:drawable/ic_menu_share" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
+    <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="362dp"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="30dp"
+        android:layout_height="300dp"
+        android:layout_marginTop="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/claim_image"
-            android:layout_width="362dp"
-            android:layout_height="362dp"
-            tools:srcCompat="@tools:sample/avatars" />
-
-        <Button
-            android:id="@+id/full_article_button"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView"
             android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:layout_gravity="bottom"
-            android:capitalize="none"
-            android:fontFamily="@font/comfortaa_bold"
-            android:text="Read The Full Article"
-            android:textAllCaps="false"
-            android:textColor="#272727"
-            android:textColorHighlight="@color/main_blue"
-            android:textColorLink="@color/main_blue"
-            app:cornerRadius="0dp"
-            app:iconTint="#FFFFFF"
-            app:rippleColor="@color/main_blue" />
-    </androidx.cardview.widget.CardView>
+            android:layout_height="match_parent"
+            app:cardCornerRadius="30dp">
+
+            <ImageView
+                android:id="@+id/claim_image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                tools:srcCompat="@tools:sample/avatars" />
+
+            <Button
+                android:id="@+id/full_article_button"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:layout_gravity="bottom"
+                android:capitalize="none"
+                android:fontFamily="@font/comfortaa_bold"
+                android:text="Read the full article"
+                android:textAllCaps="false"
+                android:textColor="#FFFFFF"
+                android:textColorHighlight="@color/main_blue"
+                android:textColorLink="@color/main_blue"
+                app:cornerRadius="0dp"
+                app:iconTint="#FFFFFF"
+                app:rippleColor="@color/main_blue" />
+
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
