--- a/app/src/main/res/layout/custom_trend_layout.xml
+++ b/app/src/main/res/layout/custom_trend_layout.xml
@@ -11,8 +11,8 @@
         android:layout_height="33dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="32dp"
-        app:layout_constraintBottom_toTopOf="@+id/cardView2"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/trendName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.272"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,35 +21,31 @@
 
     <TextView
         android:id="@+id/title_text_view"
-        android:layout_width="243dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="155dp"
-        android:layout_marginTop="62dp"
-        android:layout_marginEnd="13dp"
-        android:layout_marginBottom="60dp"
+        android:layout_width="225dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="34dp"
+        android:layout_marginTop="55dp"
+        android:layout_marginEnd="7dp"
         android:fontFamily="@font/comfortaa_bold"
         android:text="TextView"
         android:textColor="#272727"
         android:textSize="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/date_text_view"
-        app:layout_constraintEnd_toStartOf="@+id/cardView2"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView6"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/cardView2"
+        app:layout_constraintTop_toBottomOf="@+id/trendName" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="265dp"
         android:layout_marginBottom="32dp"
         app:cardCornerRadius="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/title_text_view"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView6">
+        app:layout_constraintTop_toBottomOf="@+id/trendName">
 
         <ImageView
             android:id="@+id/image_view"
@@ -62,18 +58,17 @@
 
     <TextView
         android:id="@+id/date_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
+        android:layout_width="137dp"
+        android:layout_height="17dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="205dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginEnd="200dp"
+        android:layout_marginBottom="5dp"
         android:fontFamily="@font/comfortaa_light"
         android:text="TextView"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/cardView2"
-        app:layout_constraintHorizontal_bias="0.003"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView2" />
 
@@ -81,45 +76,98 @@
         android:id="@+id/review_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="155dp"
-        android:layout_marginEnd="211dp"
+        android:layout_marginStart="59dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="200dp"
         android:fontFamily="@font/comfortaa"
         android:text="TextView"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/title_text_view"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView6"
-        app:layout_constraintVertical_bias="0.816" />
+        app:layout_constraintStart_toEndOf="@+id/cardView2"
+        app:layout_constraintTop_toBottomOf="@+id/trendName" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="243dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="13dp"
+        android:layout_width="253dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="113dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="24dp"
         android:fontFamily="@font/comfortaa_bold"
         android:text="Read the full article"
         android:textAllCaps="false"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/cardView2"
-        app:layout_constraintTop_toBottomOf="@+id/title_text_view" />
+        app:layout_constraintTop_toBottomOf="@+id/trendName" />
 
     <ImageButton
         android:id="@+id/share_image_button"
-        android:layout_width="29dp"
-        android:layout_height="29dp"
-        android:layout_marginStart="170dp"
-        android:layout_marginTop="33dp"
-        android:layout_marginEnd="13dp"
+        android:layout_width="52dp"
+        android:layout_height="41dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:backgroundTint="#00FFFFFF"
+        android:scaleType="fitCenter"
         app:layout_constraintBottom_toTopOf="@+id/title_text_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/review_text_view"
-        app:layout_constraintTop_toBottomOf="@+id/imageView6"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@android:drawable/ic_menu_share" />
+        app:layout_constraintTop_toBottomOf="@+id/trendName"
+        app:srcCompat="@drawable/emoji_u1f4ac" />
+
+    <TextView
+        android:id="@+id/compactReviewEmoji"
+        android:layout_width="30dp"
+        android:layout_height="24dp"
+        android:layout_marginEnd="2dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="@+id/review_text_view"
+        app:layout_constraintEnd_toStartOf="@+id/review_text_view"
+        app:layout_constraintStart_toEndOf="@+id/cardView2"
+        app:layout_constraintTop_toTopOf="@+id/review_text_view" />
+
+    <TextView
+        android:id="@+id/compactTitleEmoji"
+        android:layout_width="30dp"
+        android:layout_height="24dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="26dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="@+id/title_text_view"
+        app:layout_constraintEnd_toStartOf="@+id/title_text_view"
+        app:layout_constraintStart_toEndOf="@+id/cardView2"
+        app:layout_constraintTop_toTopOf="@+id/title_text_view" />
+
+    <TextView
+        android:id="@+id/compactDateEmoji"
+        android:layout_width="30dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/date_text_view"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView2" />
+
+    <TextView
+        android:id="@+id/trendName"
+        android:layout_width="305dp"
+        android:layout_height="21dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="90dp"
+        android:layout_marginBottom="17dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toTopOf="@+id/cardView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView6" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
