--- a/app/src/main/res/layout/fragment_search_1.xml
+++ b/app/src/main/res/layout/fragment_search_1.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="44dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="24dp"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
+        app:layout_constraintBottom_toTopOf="@+id/trends_recycler_view1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="@+id/constraintLayout"
@@ -23,7 +23,7 @@
         tools:layout_constraintTop_creator="1" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/trends_recycler_view1"
         android:layout_width="412dp"
         android:layout_height="320dp"
         android:layout_marginTop="19dp"
