--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,6 +19,11 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="TabTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="android:textColor">@color/main_blue</item>
+        <item name="android:fontFamily">@font/comfortaa</item>
+    </style>
+
     <style name="Theme.NewsBear2.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.NewsBear2.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
