--- a/app/src/main/res/layout/fragment_search_1.xml
+++ b/app/src/main/res/layout/fragment_search_1.xml
@@ -8,13 +8,13 @@
     tools:context=".ui.main.PlaceholderFragment">
 
     <TextView
-        android:id="@+id/section_label"
+        android:id="@+id/section_label1"
         android:layout_width="368dp"
         android:layout_height="32dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="44dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="24dp"
+        android:text="Fragment 1"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/trends_recycler_view1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -24,13 +24,14 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/trends_recycler_view1"
-        android:layout_width="412dp"
-        android:layout_height="320dp"
-        android:layout_marginTop="19dp"
-        android:layout_marginBottom="316dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/section_label" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.321" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
