--- a/app/src/main/res/layout/fragment_search_2.xml
+++ b/app/src/main/res/layout/fragment_search_2.xml
@@ -8,13 +8,15 @@
     tools:context=".ui.main.PlaceholderFragment">
 
     <TextView
-        android:id="@+id/section_label"
+        android:id="@+id/section_label2"
         android:layout_width="368dp"
         android:layout_height="32dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="200dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="24dp"
+        android:text="Fragment 2"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/trends_recycler_view2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -31,6 +33,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/section_label" />
+        app:layout_constraintTop_toBottomOf="@+id/section_label1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
