--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,6 +22,8 @@
     <style name="TabTextAppearance" parent="TextAppearance.Design.Tab">
         <item name="android:textColor">@color/main_blue</item>
         <item name="android:fontFamily">@font/comfortaa</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 
     <style name="Theme.NewsBear2.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
