--- a/app/src/main/res/layout/fragment_search_1.xml
+++ b/app/src/main/res/layout/fragment_search_1.xml
@@ -13,8 +13,8 @@
         android:layout_height="32dp"
         android:layout_marginLeft="20dp"
         android:layout_marginEnd="20dp"
-        android:text="Fragment 1"
-        android:textSize="24sp"
+        android:text="Try searching some of these topics!"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/trends_recycler_view1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -26,7 +26,7 @@
         android:id="@+id/trends_recycler_view1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
