--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="main_blue">#9AE8EB</color>
-    <color name="darker_main_blue">#4298AF</color>
+    <color name="lighter_main_blue">#D1F5F6</color>
+    <color name="main_blue">#A8E1E3</color>
+    <color name="darker_main_blue">#538E8C</color>
     <color name="false_red">#D0312D</color>
     <color name="true_green">#74B72E</color>
     <color name="neutral_blue">#233F9C</color>
